tests/out/error/comptime/invalid_cond.in.bt
$if C and JS {}
$else $if not JS {}
$else $if RUST {}
